ReferenceConfidenceModel and tests