@@ -1,37 +1,10 @@
-/*
-* Copyright 2012-2015 Broad Institute, Inc.
-* 
-* Permission is hereby granted, free of charge, to any person
-* obtaining a copy of this software and associated documentation
-* files (the "Software"), to deal in the Software without
-* restriction, including without limitation the rights to use,
-* copy, modify, merge, publish, distribute, sublicense, and/or sell
-* copies of the Software, and to permit persons to whom the
-* Software is furnished to do so, subject to the following
-* conditions:
-* 
-* The above copyright notice and this permission notice shall be
-* included in all copies or substantial portions of the Software.
-* 
-* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-* EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
-* OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-* NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
-* HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
-* WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-* FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
-* THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-*/
+package org.broadinstitute.hellbender.utils.locusiterator;
 
-package org.broadinstitute.gatk.utils.locusiterator;
-
-import com.google.java.contract.Ensures;
-import com.google.java.contract.Invariant;
-import com.google.java.contract.Requires;
 import htsjdk.samtools.CigarOperator;
 import org.apache.log4j.Logger;
-import org.broadinstitute.gatk.utils.downsampling.Downsampler;
-import org.broadinstitute.gatk.utils.downsampling.LevelingDownsampler;
+import org.broadinstitute.hellbender.utils.Utils;
+import org.broadinstitute.hellbender.utils.downsampling.Downsampler;
+import org.broadinstitute.hellbender.utils.downsampling.LevelingDownsampler;
 
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -39,21 +12,10 @@ import java.util.List;
 
 /**
  * ReadStateManager for a single sample
- *
- * User: depristo
- * Date: 1/13/13
- * Time: 12:28 PM
  */
-@Invariant({
-        "readStartsAreWellOrdered()",
-        "! isDownsampling() || downsamplingTarget > 0",
-        "nSites >= 0",
-        "nSitesNeedingDownsampling >= 0",
-        "nSitesNeedingDownsampling <= nSites"
-})
 final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine> {
-    private final static Logger logger = Logger.getLogger(ReadStateManager.class);
-    private final static boolean CAPTURE_DOWNSAMPLING_STATS = false;
+    private static final Logger logger = Logger.getLogger(PerSampleReadStateManager.class);
+    private static final boolean CAPTURE_DOWNSAMPLING_STATS = false;
 
     /**
      * A list (potentially empty) of alignment state machines.
@@ -61,7 +23,7 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
      * The state machines must be ordered by the alignment start of their underlying reads, with the
      * lowest alignment starts on the left, and the largest on the right
      */
-    private LinkedList<AlignmentStateMachine> readStatesByAlignmentStart = new LinkedList<AlignmentStateMachine>();
+    private List<AlignmentStateMachine> readStatesByAlignmentStart = new LinkedList<>();
 
     private final Downsampler<LinkedList<AlignmentStateMachine>> levelingDownsampler;
     private final int downsamplingTarget;
@@ -78,12 +40,13 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
 
     /**
      * Create a new PerSampleReadStateManager with downsampling parameters as requested by LIBSDownsamplingInfo
-     * @param LIBSDownsamplingInfo the downsampling params we want to use
+     * @param info the downsampling params we want to use
      */
-    public PerSampleReadStateManager(final LIBSDownsamplingInfo LIBSDownsamplingInfo) {
-        this.downsamplingTarget = LIBSDownsamplingInfo.isPerformDownsampling() ? LIBSDownsamplingInfo.getToCoverage() : -1;
-        this.levelingDownsampler = LIBSDownsamplingInfo.isPerformDownsampling()
-                ? new LevelingDownsampler<LinkedList<AlignmentStateMachine>, AlignmentStateMachine>(LIBSDownsamplingInfo.getToCoverage())
+    public PerSampleReadStateManager(final LIBSDownsamplingInfo info) {
+        Utils.nonNull(info);
+        this.downsamplingTarget = info.isPerformDownsampling() ? info.getToCoverage() : -1;
+        this.levelingDownsampler = info.isPerformDownsampling()
+                ? new LevelingDownsampler<>(info.getToCoverage())
                 : null;
     }
 
@@ -97,16 +60,15 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
      *
      * @return a non-null list of lists
      */
-    @Ensures("result != null")
     private List<LinkedList<AlignmentStateMachine>> groupByAlignmentStart() {
-        final LinkedList<LinkedList<AlignmentStateMachine>> grouped = new LinkedList<LinkedList<AlignmentStateMachine>>();
+        final LinkedList<LinkedList<AlignmentStateMachine>> grouped = new LinkedList<>();
 
         AlignmentStateMachine last = null;
         for ( final AlignmentStateMachine stateMachine : readStatesByAlignmentStart ) {
             if ( last == null || stateMachine.getGenomeOffset() != last.getGenomeOffset() ) {
                 // we've advanced to a place where the state machine has a different state,
                 // so start a new list
-                grouped.add(new LinkedList<AlignmentStateMachine>());
+                grouped.add(new LinkedList<>());
                 last = stateMachine;
             }
             grouped.getLast().add(stateMachine);
@@ -119,26 +81,12 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
      * Flattens the grouped list of list of alignment state machines into a single list in order
      * @return a non-null list contains the state machines
      */
-    @Ensures("result != null")
     private LinkedList<AlignmentStateMachine> flattenByAlignmentStart(final List<LinkedList<AlignmentStateMachine>> grouped) {
-        final LinkedList<AlignmentStateMachine> flat = new LinkedList<AlignmentStateMachine>();
-        for ( final List<AlignmentStateMachine> l : grouped )
+        final LinkedList<AlignmentStateMachine> flat = new LinkedList<>();
+        for ( final List<AlignmentStateMachine> l : grouped ) {
             flat.addAll(l);
-        return flat;
-    }
-
-    /**
-     * Test that the reads are ordered by their alignment starts
-     * @return true if well ordered, false otherwise
-     */
-    private boolean readStartsAreWellOrdered() {
-        int lastStart = -1;
-        for ( final AlignmentStateMachine machine : readStatesByAlignmentStart ) {
-            if ( lastStart > machine.getRead().getAlignmentStart() )
-                return false;
-            lastStart = machine.getRead().getAlignmentStart();
         }
-        return true;
+        return flat;
     }
 
     /**
@@ -148,8 +96,8 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
      * that this return result might be negative, if downsampling is enabled, as we might drop
      * more sites than have been added by the downsampler
      */
-    @Requires("states != null")
-    public int addStatesAtNextAlignmentStart(final LinkedList<AlignmentStateMachine> states) {
+    public int addStatesAtNextAlignmentStart(final List<AlignmentStateMachine> states) {
+        Utils.nonNull(states);
         if ( states.isEmpty() ) {
             return 0;
         }
@@ -186,13 +134,12 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
      * @return a potentially null AlignmentStateMachine
      */
     public AlignmentStateMachine getFirst() {
-        return isEmpty() ? null : readStatesByAlignmentStart.getFirst();
+        return isEmpty() ? null : readStatesByAlignmentStart.get(0);
     }
 
     /**
      * Capture some statistics about the behavior of the downsampling, but only if CAPTURE_DOWNSAMPLING_STATS is true
      */
-    @Requires("isDownsampling()")
     private void captureDownsamplingStats() {
         if ( CAPTURE_DOWNSAMPLING_STATS ) {
             nSites++;
@@ -204,9 +151,10 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
                 message = "Downsampling";
             }
 
-            if ( downsampling || nSites % 10000 == 0 )
+            if ( downsampling || nSites % 10000 == 0 ) {
                 logger.info(String.format("%20s at %s: coverage=%d, max=%d, fraction of downsampled sites=%.2e",
                         message, loc, size(), downsamplingTarget, (1.0 * nSitesNeedingDownsampling / nSites)));
+            }
         }
     }
 
@@ -222,7 +170,6 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
      * Get the number of read states currently in this manager
      * @return the number of read states
      */
-    @Ensures("result >= 0")
     public int size() {
         return readStatesByAlignmentStart.size();
     }
@@ -254,7 +201,7 @@ final class PerSampleReadStateManager implements Iterable<AlignmentStateMachine>
      * Iterate over the AlignmentStateMachine in this manager in alignment start order.
      * @return a valid iterator
      */
-    @Ensures("result != null")
+    @Override
     public Iterator<AlignmentStateMachine> iterator() {
         return readStatesByAlignmentStart.iterator();
     }
